# python-audio-interfaces

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  scratch.py  setup.sh
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
easy_audio_interfaces/: __init__.py  audio_interfaces.py  base_interfaces.py  cli.py  utils.py
easy_audio_interfaces/data/: data_collection_gui.py
easy_audio_interfaces/examples/: asr_over_network.py  basic_ai.py  basic_friend_recorder.py  bluetooth_websocket_recorder.py  file_network_transfer.py  record_local_audio.py  streaming_asr.py  test_websocket_audio.py
easy_audio_interfaces/extras/: friend_bluetooth.py  local_audio.py  local_audio_sources.py  models.py
easy_audio_interfaces/filesystem/: filesystem_interfaces.py
easy_audio_interfaces/network/: network_interfaces.py
easy_audio_interfaces/tests/: test_filesystem_interfaces.py  test_network_interfaces.py  test_processing_interfaces.py  utils.py
easy_audio_interfaces/types/: __init__.py  audio.py  common.py
examples/: bluetooth_websocket_recorder.py  file_network_transfer.py  record_local_audio.py  wyoming-asr.py
examples/local-stream/: client.py  server.py
examples/local-wakeword/: audio-stream-client.py  wakeword-server.py
examples/stream-from-havpe/: havpe_to_asr_and_save.py  lib_voice_pe_decoder.py
examples/stream-from-havpe/firmware/: README.md  pyproject.toml  secrets.template.yaml  tcp_stream.h  voice-tcp.yaml
