[project]
name = "easy-audio-interfaces"
version = "0.2.2"
description = ""
readme = "README.md"
requires-python = ">=3.9,<3.13"
authors = [
  { name = "Ankush Malaker", email = "43288948+AnkushMalaker@users.noreply.github.com" },
]
dependencies = [
  "pyaudio>=0.2.13,<0.3.0",
  "samplerate>=0.1.0,<0.2.0",
  "types-pyaudio>=0.2.16.5,<0.3.0",
  "fire>=0.5.0,<0.6.0",
  "scipy>=1.11.2,<1.12.0",
  "rich>=13.5.3,<14.0.0",
  "opuslib>=3.0.1,<4.0.0",
  "websockets>=13.1,<14.0",
  "pydub>=0.25.1,<0.26.0",
]
optional-dependencies = { stt = [
  "faster-whisper",
], silero-vad = [
  "torch",
  "torchaudio",
], bluetooth = [
  "bleak",
], local-audio = [
  "pyaudio",
] }

# [project.scripts]
# Define any CLI scripts here if needed

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# [tool.uv]
# uv-specific configurations can be added here

[tool.setuptools]
platforms = ["any"]
zip-safe  = true
include-package-data = true

[tool.setuptools.packages.find]
include = ["easy_audio_interfaces*"]
exclude = ["easy_audio_interfaces/tests"]

[tool.isort]
profile = "black"

[tool.black]
exclude = '''
(
  .venv
  | .git
  | lightning_logs
  | multirun
)
'''
line-length = 100
target-version = ["py39", "py310"]

[tool.mypy]
files = ["easy_audio_interfaces"]

[[tool.mypy.overrides]]
module = [
  "onnxruntime.*",
  "samplerate.*",
  "fire.*",
  "scipy.*",
  "pydub.*",
  "torchaudio.*",
  "opuslib.*",
]
ignore_missing_imports = true
